// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchResultsItemComponent should display placeholder when image is loading 1`] = `
<app-search-results-item
  isLoaded="false"
  isLoadingFailed="false"
  item={[Function Object]}
  loadingFailedPlaceholder={[Function String]}
>
  <div
    ng-reflect-ng-style="[object Object]"
    style="background-color: rgb(173, 212, 221);"
  >
    
    
    <img
      class="loading"
      src="some-url"
    />
    
  
  </div>
  
</app-search-results-item>
`;

exports[`SearchResultsItemComponent should display placeholder when image loading is failed 1`] = `
<app-search-results-item
  isLoaded="false"
  isLoadingFailed={[Function Boolean]}
  item={[Function Object]}
  loadingFailedPlaceholder={[Function String]}
>
  <div
    ng-reflect-ng-style="[object Object]"
    style="background-color: rgb(173, 212, 221);"
  >
    
    
    <img
      class="loading"
      src="assets/loading_failed.png"
    />
    
  
  </div>
  
</app-search-results-item>
`;

exports[`SearchResultsItemComponent should render image 1`] = `
<app-search-results-item
  isLoaded={[Function Boolean]}
  isLoadingFailed="false"
  item={[Function Object]}
  loadingFailedPlaceholder={[Function String]}
>
  <div
    style=""
  >
    
    
    <img
      class="loaded"
      src="some-url"
    />
    
  
  </div>
  
</app-search-results-item>
`;
